--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-react": "^7.31.11",
     "prettier": "^2.8.2",
+    "prettier-plugin-tailwindcss": "^0.2.1",
+    "react-icons": "^4.7.1",
     "tailwindcss": "^3.2.4"
   }
 }
