--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint": "^8.31.0",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-react": "^7.31.11",
+    "jest-fetch-mock": "^3.0.3",
     "prettier": "^2.8.2",
     "prettier-plugin-tailwindcss": "^0.2.1",
     "react-icons": "^4.7.1",
